crates/math-core/tests/snapshots/conversion_test__mkern_negative.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\mkern-9mu y"
---
<math>
    <mi>x</mi>
    <mspace style="margin-left:-0.5em;"/>
    <mi>y</mi>
</math>
