crates/math-core/tests/snapshots/conversion_test__mskip.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\mskip3mu y"
---
<math>
    <mi>x</mi>
    <mspace width="0.16666667em"/>
    <mi>y</mi>
</math>
