crates/math-core/tests/snapshots/conversion_test__mspace.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\mspace{18mu} y"
---
<math>
    <mi>x</mi>
    <mspace width="1em"/>
    <mi>y</mi>
</math>
