crates/math-core/tests/snapshots/conversion_test__multline_with_shove.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{multline}\\shoveright a\\\\\\shoveleft b\\\\c\\end{multline}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 7.5%"></mtd>
            <mtd style="text-align: right;justify-items: end;">
                <mi>a</mi>
            </mtd>
            <mtd style="width: 7.5%"></mtd>
        </mtr>
        <mtr>
            <mtd style="width: 7.5%"></mtd>
            <mtd style="text-align: left;justify-items: start;">
                <mi>b</mi>
            </mtd>
            <mtd style="width: 7.5%"></mtd>
        </mtr>
        <mtr>
            <mtd style="width: 7.5%"></mtd>
            <mtd style="text-align: right;justify-items: end;">
                <mi>c</mi>
            </mtd>
            <mtd style="width: 7.5%;text-align: right;justify-items: end;">
                <mtext>(1)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
