crates/math-core/tests/snapshots/conversion_test__nabla_in_mathbf.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathbf{\\nabla} + \\nabla"
---
<math>
    <mi>𝛁</mi>
    <mo>+</mo>
    <mpadded><mi mathvariant="normal">∇</mi></mpadded>
</math>
