crates/math-core/tests/snapshots/conversion_test__negative_space.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x \\! x"
---
<math>
    <mi>x</mi>
    <mspace style="margin-left:-0.16666667em;"/>
    <mi>x</mi>
</math>
