crates/math-core/tests/snapshots/conversion_test__nested_custom_cmd.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\ket{x\\ket f} x"
---
<math>
    <mo stretchy="false" form="prefix">|</mo>
    <mi>x</mi>
    <mo stretchy="false" form="prefix">|</mo>
    <mi>f</mi>
    <mo stretchy="false">⟩</mo>
    <mo stretchy="false">⟩</mo>
    <mi>x</mi>
</math>
